[package]
name = "rt1we_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rt1we_renderer = { path = "../rt1we_renderer" }
#egui = "0.14.2"
eframe = "0.23.0"
egui_extras = {version = "0.23.0", features = ["image"]}
env_logger = "0.9.0"


#[dev-dependencies]
#tempfile = "3.5.0"
